# clamav-async-rs

./: Cargo.toml
.github/workflows/: build.yml
src/: callback.rs  cvd.rs  db.rs  engine.rs  error.rs  fmap.rs  layer_attr.rs  lib.rs  scan_settings.rs  version.rs  windows_fd.rs
src/cvd/: head_libclamav.rs  head_native.rs
