[package]
authors = [
  "Scott Hutton <schutton@cisco.com>",
  "Micah Snyder <micasnyd@cisco.com>",
  "Jonas Zaddach <jzaddach@cisco.com>",
]
categories = ["api-bindings"]
description = "Asynchronous API for clamav-sys"
documentation = "https://docs.rs/clamav-async-rs"
edition = "2021"
keywords = ["clamav", "libclamav", "antivirus"]
license = "LGPL-2.1"
name = "clamav-async"
repository = "https://github.com/Cisco-Talos/clamav-async-rs"
version = "0.1.0"

[dependencies]
