[package]
authors = [
  "Jonas Zaddach <jonas.zaddach@gmail.com",
  "Zachary Sims <zac@icebergdefender.com>",
  "Scott Hutton <schutton@cisco.com>",
]
categories = ["api-bindings"]
description = "Async ClamAV bindings for Rust"
edition = "2021"
exclude = ["test_data/*"]
homepage = "https://github.com/Cisco-Talos/clamav-async-rs"
license = "GPL-2.0"
name = "clamav-async"
repository = "https://github.com/Cisco-Talos/clamav-async-rs"
version = "0.5.5"

[features]
default = ["native-impl"]
# native-impl enables native implementations where possible (ignoring
# implementations provided by libclamav)
native-impl = []
# tokio-runtime activates async functionality

[dependencies]
bitflags = "2"
derivative = "2"
lazy_static = "1"
libc = "0.2"
log = "0.4"
thiserror = "1"
time = { version = "0.3", features = [
  "parsing",
  "macros",
  "formatting",
  "std",
] }
tokio = { version = "1", features = ["sync", "rt", "macros"] }
tokio-stream = { version = "0.1" }
clamav-sys = "1.0"

[target.'cfg(windows)'.dependencies]
bindings = { version = "0.5.5", package = "clamav-rs-bindings" }

[dev-dependencies]
tempfile = "3"
